--- a/index.html
+++ b/index.html
@@ -325,4 +325,22 @@ document.addEventListener("DOMContentLoaded", () => {
         html+=`<details open><summary style="color:#007bff;cursor:pointer;">🧩 Lösungsweg anzeigen</summary>`;
         html+=`<div style="text-align:left;max-width:420px;margin:6px auto;font-size:0.95em;line-height:1.4;color:#000;">`;
         html+=exp.steps.map(s=>`<div>${s}</div>`).join("");
-        html+=`<div style="margin-top:6px;font-style:italic;">Beispiel: ${exp
+        html+=`<div style="margin-top:6px;font-style:italic;">Beispiel: ${exp.example}</div></div></details>`;
+      }
+      resultEl.innerHTML=html;
+    }
+
+    firstTry=false;
+    round++;
+    scoreEl.innerText=`Aufgabe ${Math.min(round,totalRounds)} von ${totalRounds} – Punkte: ${score}`;
+  }
+
+  checkBtn.addEventListener("click",checkAnswer);
+  newBtn.addEventListener("click",newTask);
+  answerEl.addEventListener("keydown",e=>{if(e.key==="Enter")checkAnswer();});
+  initProgressBar();
+  newTask();
+});
+</script>
+</body>
+</html>
