--- a/index.html
+++ b/index.html
@@ -199,38 +199,46 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 
-  function createMonomBinom() {
-    const coeff = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
-    const v1 = randomVar();
-    const exp1 = Math.floor(Math.random() * 3) + 1;
-    const monom = `${formatCoeff(coeff, true)}${v1}${exp1 > 1 ? (exp1 === 2 ? '²' : '³') : ''}`;
+function createMonomBinom() {
+  const coeff = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
+  const v1 = randomVar();
 
-    let v2 = randomVar();
-    if (v2 === v1 && exp1 >= 2) {
-      do { v2 = randomVar(); } while (v2 === v1);
-    }
+  // Hochzahl 1 oder 2 (³ nur selten)
+  const exp1 = Math.random() < 0.8 ? 1 + Math.floor(Math.random() * 2) : 3;
+  const monom = `${formatCoeff(coeff, true)}${v1}${exp1 > 1 ? (exp1 === 2 ? '²' : '³') : ''}`;
 
-    const b1 = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
-    const b2 = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
-
-    const binom = `(${b1 >= 0 ? '+':''}${b1}${v2} ${b2 >= 0 ? '+':'-'} ${Math.abs(b2)})`;
-
-    const expPart = exp1 > 1 ? (exp1 === 2 ? '²' : '³') : '';
-    let vars1 = sortVars(v1 + expPart + v2);
-    let vars2 = sortVars(v1 + expPart);
-
-    if (vars1.includes(v1 + '⁴') || vars1.includes(v1 + '^4')) {
-      return createMonomBinom();
-    }
-
-    const term1 = `${coeff * b1}${vars1}`;
-    const term2 = `${coeff * b2}${vars2}`;
-    correctSolution = `${term1.startsWith('-') ? '' : '+'}${term1} ${term2.startsWith('-') ? '' : '+'} ${term2}`
-      .replace(/\+\s*-/g, '- ')
-      .replace(/^\+\s*/, '');
-
-    return `${monom} · ${binom} = ?`;
+  // In etwa 50 % der Fälle dieselbe Variable
+  let v2;
+  if (Math.random() < 0.5) {
+    v2 = v1;
+  } else {
+    do { v2 = randomVar(); } while (v2 === v1);
   }
+
+  const b1 = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
+  const b2 = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
+
+  const binom = `(${b1 >= 0 ? '+' : ''}${b1}${v2} ${b2 >= 0 ? '+' : '-'} ${Math.abs(b2)})`;
+
+  // Lösung berechnen
+  const expPart = exp1 > 1 ? (exp1 === 2 ? '²' : '³') : '';
+  let vars1 = sortVars(v1 + expPart + v2);
+  let vars2 = sortVars(v1 + expPart);
+
+  // Falls Hochzahlen zu groß würden (z. B. m⁴), neu generieren
+  if (vars1.includes(v1 + '⁴') || vars1.includes(v1 + '^4')) {
+    return createMonomBinom();
+  }
+
+  const term1 = `${coeff * b1}${vars1}`;
+  const term2 = `${coeff * b2}${vars2}`;
+  correctSolution = `${term1.startsWith('-') ? '' : '+'}${term1} ${term2.startsWith('-') ? '' : '+'} ${term2}`
+    .replace(/\+\s*-/g, '- ')
+    .replace(/^\+\s*/, '');
+
+  return `${monom} · ${binom} = ?`;
+}
+
 
   function createGeneralBinom(){
     let v1=randomVar(),v2=randomVar();
