--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   }
   h1 { color:#333; margin:10px 0; font-size:1.8em; }
   #task { font-size:1.6em; margin:15px auto; white-space:pre-line; }
+  #hint { font-size:0.9em; color:#007bff; margin-top:-5px; min-height:1.2em; }
   #result { font-size:1.1em; margin:10px; color:#000; font-weight:400; }
   #score { font-size:1.1em; margin:8px; color:#333; }
   #levelDisplay { font-weight:bold; color:#007bff; margin-bottom:5px; }
@@ -49,6 +50,7 @@
 <div id="score">Lade...</div>
 <div id="progressContainer"></div>
 <div id="task">...</div>
+<p id="hint"></p>
 <input type="text" id="answer" placeholder="Deine Lösung" autocomplete="off" spellcheck="false"><br>
 <button id="checkBtn">Prüfen</button>
 <button id="newBtn">Neue Aufgabe</button>
@@ -65,6 +67,7 @@ document.addEventListener("DOMContentLoaded", () => {
   const checkBtn = document.getElementById("checkBtn");
   const newBtn = document.getElementById("newBtn");
   const taskEl = document.getElementById("task");
+  const hintEl = document.getElementById("hint");
   const resultEl = document.getElementById("result");
   const scoreEl = document.getElementById("score");
   const levelDisplay = document.getElementById("levelDisplay");
@@ -105,7 +108,6 @@ document.addEventListener("DOMContentLoaded", () => {
   let firstTry=true, answered=false;
   const segments=[];
 
-  // Fortschrittsbalken initialisieren
   function initProgressBar(){
     progressContainer.innerHTML="";
     segments.length=0;
@@ -126,7 +128,7 @@ document.addEventListener("DOMContentLoaded", () => {
     "Level 5: Gemischt"
   ];
 
-  // --- Aufgabenfunktionen ---
+  // Aufgabenfunktionen
   function createIntTask(){
     const count=Math.random()<0.5?2:3;
     let nums=[], res=1;
@@ -145,100 +147,82 @@ document.addEventListener("DOMContentLoaded", () => {
     }).join(" · ")+" = ?";
   }
 
- function createSimpleTask(){
-  const count = Math.random() < 0.5 ? 2 : 3;
-  let coeff = 1, vars = [];
-  let text = "";
+  function createSimpleTask(){
+    const count = Math.random() < 0.5 ? 2 : 3;
+    let coeff = 1, vars = [];
+    let text = "";
 
-  // Häufig gleiche Variablen
-  const sameVarChance = Math.random() < 0.8;
-  const baseVar = randomVar();
+    const sameVarChance = Math.random() < 0.8;
+    const baseVar = randomVar();
 
-  for (let i = 0; i < count; i++) {
-    const s = randomSign() === '-' ? -1 : 1;
-    const max = (count === 3) ? 3 : 9;
-    const n = randomChoice([...Array(max).keys()].map(x => x + 1));
+    for (let i = 0; i < count; i++) {
+      const s = randomSign() === '-' ? -1 : 1;
+      const max = (count === 3) ? 3 : 9;
+      const n = randomChoice([...Array(max).keys()].map(x => x + 1));
 
-    // In 90 % der Fälle mit Variable
-    const hasVar = Math.random() < 0.9;
-    const v = hasVar ? (sameVarChance ? baseVar : randomVar()) : "";
+      const hasVar = Math.random() < 0.9;
+      const v = hasVar ? (sameVarChance ? baseVar : randomVar()) : "";
 
-    coeff *= s * n;
-    if (hasVar) vars.push(v);
+      coeff *= s * n;
+      if (hasVar) vars.push(v);
 
-    let numPart;
-    if (hasVar) {
-      // Wenn Variable: 1x → x, −1x → −x
-      if (n === 1) numPart = (s === -1 ? "-" : "");
-      else numPart = (s === -1 ? "-" : "") + n;
-    } else {
-      // Wenn keine Variable: Zahl immer vollständig anzeigen
-      numPart = (s === -1 ? "-" : "") + n;
+      let numPart;
+      if (hasVar) {
+        if (n === 1) numPart = (s === -1 ? "-" : "");
+        else numPart = (s === -1 ? "-" : "") + n;
+      } else {
+        numPart = (s === -1 ? "-" : "") + n;
+      }
+
+      const plusForm = (s === 1 && Math.random() < 0.75);
+      const inner = plusForm ? `(+${numPart}${v})` : `(${numPart}${v})`;
+      text += inner + " · ";
     }
 
-    const plusForm = (s === 1 && Math.random() < 0.75);
-    const inner = plusForm ? `(+${numPart}${v})` : `(${numPart}${v})`;
-    text += inner + " · ";
+    text = text.slice(0, -3);
+
+    vars.sort();
+    const varCount = {};
+    for (const v of vars) varCount[v] = (varCount[v] || 0) + 1;
+
+    let varsPart = "";
+    for (const [v, exp] of Object.entries(varCount))
+      varsPart += v + (exp > 1 ? (exp === 2 ? '²' : '³') : '');
+    varsPart = sortVars(varsPart);
+
+    correctSolution = `${formatCoeff(coeff, true)}${varsPart}`;
+    return `${text} = ?`;
   }
 
-  text = text.slice(0, -3);
+  function createMonomBinom() {
+    const coeff = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
+    const v1 = randomVar();
+    const exp1 = Math.random() < 0.8 ? 1 + Math.floor(Math.random() * 2) : 3;
+    const monom = `${formatCoeff(coeff, true)}${v1}${exp1 > 1 ? (exp1 === 2 ? '²' : '³') : ''}`;
 
-  // Variablen zusammenfassen
-  vars.sort();
-  const varCount = {};
-  for (const v of vars) varCount[v] = (varCount[v] || 0) + 1;
+    let v2;
+    if (Math.random() < 0.5) v2 = v1;
+    else do { v2 = randomVar(); } while (v2 === v1);
 
-  let varsPart = "";
-  for (const [v, exp] of Object.entries(varCount))
-    varsPart += v + (exp > 1 ? (exp === 2 ? '²' : '³') : '');
-  varsPart = sortVars(varsPart);
+    const b1 = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
+    const b2 = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
 
-  correctSolution = `${formatCoeff(coeff, true)}${varsPart}`;
-  return `${text} = ?`;
-}
+    const binom = `(${b1 >= 0 ? '+' : ''}${b1}${v2} ${b2 >= 0 ? '+' : '-'} ${Math.abs(b2)})`;
 
+    const expPart = exp1 > 1 ? (exp1 === 2 ? '²' : '³') : '';
+    let vars1 = sortVars(v1 + expPart + v2);
+    let vars2 = sortVars(v1 + expPart);
 
+    if (vars1.includes(v1 + '⁴') || vars1.includes(v1 + '^4')) return createMonomBinom();
 
-function createMonomBinom() {
-  const coeff = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
-  const v1 = randomVar();
+    const term1 = `${coeff * b1}${vars1}`;
+    const term2 = `${coeff * b2}${vars2}`;
+    correctSolution = `${term1.startsWith('-') ? '' : '+'}${term1} ${term2.startsWith('-') ? '' : '+'} ${term2}`
+      .replace(/\+\s*-/g, '- ')
+      .replace(/^\+\s*/, '');
 
-  // Hochzahl 1 oder 2 (³ nur selten)
-  const exp1 = Math.random() < 0.8 ? 1 + Math.floor(Math.random() * 2) : 3;
-  const monom = `${formatCoeff(coeff, true)}${v1}${exp1 > 1 ? (exp1 === 2 ? '²' : '³') : ''}`;
-
-  // In etwa 50 % der Fälle dieselbe Variable
-  let v2;
-  if (Math.random() < 0.5) {
-    v2 = v1;
-  } else {
-    do { v2 = randomVar(); } while (v2 === v1);
+    return `${monom} · ${binom} = ?`;
   }
-
-  const b1 = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
-  const b2 = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
-
-  const binom = `(${b1 >= 0 ? '+' : ''}${b1}${v2} ${b2 >= 0 ? '+' : '-'} ${Math.abs(b2)})`;
-
-  // Lösung berechnen
-  const expPart = exp1 > 1 ? (exp1 === 2 ? '²' : '³') : '';
-  let vars1 = sortVars(v1 + expPart + v2);
-  let vars2 = sortVars(v1 + expPart);
-
-  // Falls Hochzahlen zu groß würden (z. B. m⁴), neu generieren
-  if (vars1.includes(v1 + '⁴') || vars1.includes(v1 + '^4')) {
-    return createMonomBinom();
-  }
-
-  const term1 = `${coeff * b1}${vars1}`;
-  const term2 = `${coeff * b2}${vars2}`;
-  correctSolution = `${term1.startsWith('-') ? '' : '+'}${term1} ${term2.startsWith('-') ? '' : '+'} ${term2}`
-    .replace(/\+\s*-/g, '- ')
-    .replace(/^\+\s*/, '');
-
-  return `${monom} · ${binom} = ?`;
-}
-
 
   function createGeneralBinom(){
     let v1=randomVar(),v2=randomVar();
@@ -299,11 +283,13 @@ function createMonomBinom() {
   function newTask(){
     resultEl.innerText="";answerEl.value="";firstTry=true;answered=false;
     levelDisplay.innerText=LEVEL_NAMES[level-1];
+    hintEl.innerText="";
     if(round>totalRounds){
       resultEl.style.color="green";
       resultEl.innerHTML=`🎉 Level fertig!<br>Endstand: ${score}/${totalRounds}`;
       nextLevel();return;
     }
+
     let aufgabe;
     switch(level){
       case 1: aufgabe=createIntTask();break;
@@ -313,6 +299,13 @@ function createMonomBinom() {
       case 5: aufgabe=randomChoice([createIntTask,createSimpleTask,createMonomBinom,createGeneralBinom,createPlusMinusBinom])();break;
     }
     taskEl.innerText=aufgabe;
+
+    // 💡 Hinweis bei 3 Faktoren in Level 1 & 2
+    const faktorCount = (aufgabe.match(/·/g) || []).length + 1;
+    if (faktorCount === 3 && (level === 1 || level === 2)) {
+      hintEl.innerText = "💡 Tipp: Multipliziere zuerst zwei Faktoren und dann das Ergebnis mit dem dritten.";
+    }
+
     scoreEl.innerText=`Aufgabe ${round} von ${totalRounds} – Punkte: ${score}`;
   }
 
